2008-07-03  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Mark Rowe.
        
        Updated this test result to match our new, smaller recursion limit.
        With the new limit, an exception is thrown on entry to the document.write
        script, which is why you see an exception logged to the console, instead
        of caught inside the script.

        * fast/js/global-recursion-on-full-stack-expected.txt:

2008-07-02  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Mark Rowe.
        
        Updated this test to match our lower recursion limit, and to signal
        failure as failure.

        * fast/js/deep-recursion-test.html:

2008-07-02  Oliver Hunt  <oliver@apple.com>

        RS=Mark Rowe.

        Reduce test runtime to avoid timeout on slow hardware with debug builds.

        * fast/canvas/canvas-longlived-context.js:

2008-07-02  Brady Eidson  <beidson@apple.com>

        Reviewed by Mitz Pettel and John Sullivan

        Fix for <rdar://problem/5549871> - Crash when calling [WebView stopLoading:] or [WebFrame stopLoading] 
        inside of the frame load delegate method -webView:didStartProvisionalLoadForFrame:.

        * fast/loader/stop-provisional-loads-expected.txt: Added.
        * fast/loader/stop-provisional-loads.html: Added.

2008-07-02  Beth Dakin  <bdakin@apple.com>

        Reviewed by Darin.

        Tests for <rdar://problem/6015523> Implement ARIA ranges/sliders
        and
        <rdar://problem/5934355> Need to implement ARIA role="spinbutton"

        * accessibility/aria-range-expected.txt: Added.
        * accessibility/aria-range.html: Added.
        * accessibility/aria-slider-expected.txt: Added.
        * accessibility/aria-slider.html: Added.
        * accessibility/aria-spinbutton-expected.txt: Added.
        * accessibility/aria-spinbutton.html: Added.

        This test used to have a section for slider. It was a mistake for 