@@ -1,3 +1,13 @@
+2008-07-03  Alexey Proskuryakov  <ap@webkit.org>
+
+        Reviewed by Darin.
+
+        https://bugs.webkit.org/show_bug.cgi?id=19884
+        Locating a store at www.366.ru doesn't work
+
+        * fast/forms/submit-with-base-expected.txt: Added.
+        * fast/forms/submit-with-base.html: Added.
+
 2008-07-03  Geoffrey Garen  <ggaren@apple.com>
 
         Reviewed by Mark Rowe.
